test/sema/typeck/assign/reassign-tuple-field.out
error: cannot mutate field of immutable value type.
--> reassign-tuple-field.dora:1:32
 | fn f() { let x = (0i32, true); x.0 = 10i32; }
                                  ~~~~~~~~~~~
 | 
1 error found.
