test/sema/typeck/assign/reassign-tuple-field.dora
fn f() { let x = (0i32, true); x.0 = 10i32; }
